--- a/report.tex
+++ b/report.tex
@@ -174,7 +174,7 @@ Not Found &  22 (10.0\%) \\
 %\end{figure}
 
 This proposal report is organized as follows: Section \ref{relatedwork} presents related literature on open source social communities, the gap in the literature, and discusses why the issue needs to be studied. 
-Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. In section \ref{sectionInitialStudy}, we present results of our initial study. Section \ref{timelineSection}, shows the proposed timeline for the research and the author's graduation. And lastly, section \ref{threatsToValidity} we discuss the threats to validity.\\
+Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. Section \ref{YetToBeDone} presents the work that needs to be done. Section \ref{timelineSection}, shows the proposed timeline for the research. Lastly, section \ref{threatsToValidity} the threats to validity are discussed. \\
 \pagebreak
 
 \section{Related Work}
