--- a/referenc.tex
+++ b/referenc.tex
@@ -62,6 +62,8 @@
 
 \bibitem{Chakrabarti} Chakrabarti,  D., and C. Faloutsos. ``\textit{Graph mining: Laws, generators, and algorithms,}'' ACM Computing Surveys, 38, 1, Article 2, 2006.
 
+\bibitem{Chen} Chen, C. and Liu, Lon-Mu, ``\textit{Joint Estimation of Model Parameters and Outlier Effects in Time Series,}'' Journal of the American Statistical Association, 88, 284--297. 1993.
+
 \bibitem{Coleman1964} Coleman, J.S. ``\textit{Introduction to Mathematical Sociology,}'' New York etc.: The Free Press of Glencoe. 1964.
 
 \bibitem{CrowstonFLOSSWhatWeKnow} 
@@ -70,6 +72,9 @@ Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-sour
 \bibitem{DavidsonVLHCC2014} Davidson, J, R. Naik, A. Mannan, A. Azarbakht, C. Jensen, ``\textit{On older adults in free/open source software: reflections of contributors and community leaders,}'' Proc. IEEE Symp. Visual Languages and Human-Centric Computing, 2014.
 
 \bibitem{Ernst} Ernst, N., S. Easterbrook, and J. Mylopoulos, ``\textit{Code forking in open-source software: a requirements perspective,}'' arXiv preprint arXiv:1004.2889, 2010.
+
+\bibitem{Feuer} Feuerriegel S. and N. Proellochs. ``\textit{SentimentAnalysis: Dictionary-based sentiment analysis}'', R package version 1.1-0.
+https://github.com/sfeuerriegel/SentimentAnalysis. 2016.
 
 \bibitem{Ford} Ford, L. R. and D. R. Folkerson, ``\textit{A simple algorithm for finding maximal network flows and an application to the Hitchcock problem,}'' Canadian Journal of Mathematics, vol. 9, pp. 210-218, 1957. 
 
@@ -97,7 +102,9 @@ Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-sour
 
 \bibitem{LeskovecGraphsOverTime} Leskovec, J., Kleinberg, J., and Faloutsos, C.: ``\textit{Graphs over time: densification laws, shrinking diameters and possible explanations,}'' Proc. SIGKDD Int'l. Conf. Knowledge Discovery and data Mining, 2005. 
 
-\bibitem{LeskovecStatisticalPropertiesOfCommunityStructure} Leskovec, J., K. J. Lang, A. Dasgupta, and M. W. Mahoney, ``\textit{Statistical properties of community structure in large social and information networks,}'' Proc. 17th Int'l. Conf. World Wide Web, ACM, 2008.  
+\bibitem{LeskovecStatisticalPropertiesOfCommunityStructure} Leskovec, J., K. J. Lang, A. Dasgupta, and M. W. Mahoney, ``\textit{Statistical properties of community structure in large social and information networks,}'' Proc. 17th Int'l. Conf. World Wide Web, ACM, 2008.
+
+\bibitem{Lopez} Lopez-de-Lacalle, J. ``\textit{tsoutliers: Detection of Outliers in Time Series}'', R package version 0.6-5. https://CRAN.R-project.org/package=tsoutliers, 2016.
 
 \bibitem{Nakakoji} Nakakoji, K., Y. Yamamoto, Y. Nishinaka, K. Kishida, and Y. Ye. ``\textit{Evolution patterns of open-source software systems and communities,}'' Proc. Int'l. Workshop Principles of Software Evolution, ACM, 2002.
 
@@ -116,6 +123,10 @@ Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-sour
 \bibitem{Oh} Oh, W., Jeon, S., ``\textit{Membership Dynamics and Network Stability in the Open-Source Community: The Ising Perspective}'' Proc. 25th Int'l. Conf. Information Systems. 2004.
 
 \bibitem{Page} Page, B, B. Sergey, R. Motwani and T. Winograd, ``\textit{The PageRank Citation Ranking: Bringing Order to the Web,}'' Technical Report, Stanford InfoLab, 1999.
+
+\bibitem{Proel} Proellochs, Feuerriegel and Neumann: ``\textit{Generating Domain-Specific Dictionaries Using Bayesian Learning}'', Proceedings of the 23rd European Conference on Information Systems (ECIS 2015), Muenster, Germany, 2015.
+
+\bibitem{R} R Core Team. ``\textit{R: A language and environment for statistical computing. R Foundation for Statistical Computing}'', Vienna, Austria. URL https://www.R-project.org/. 2016.
 
 \bibitem{Robins} Robins, G., P. Pattison, Y. Kalish, and D. Lusher. ``\textit{An introduction to exponential random graph (p*) models for social networks,}'' Social networks 29, no. 2: 173-191. 2007.
 
