--- a/dissertation.tex
+++ b/dissertation.tex
@@ -2,7 +2,7 @@
 
 \usepackage{url}
 \usepackage{epsfig} 
-\usepackage{makeidx}         % allows index generation
+\usepackage{makeidx}  % allows index generation
 \usepackage{graphicx}        % standard LaTeX graphics tool when including figure files
 \usepackage{multicol}        % used for the two-column index
 \usepackage[bottom]{footmisc}% places footnotes at page bottom etc.
@@ -1068,7 +1068,64 @@ Approximately $\sim$ Normal(0, 1)
 
 \paragraph{Outlier Detection}
 
-At each $t = 1, \dots, n$, for each outlier type (AO, LS, TC, IO), Estimate outlier effect $\hat{\omega}$ and calculate $\hat{\tau}$. Large $|\hat{\tau}|$ ($> C$) indicates an outlier. Once outlier is detected, estimated effect can be subtracted to obtain adjusted series. \cite{Chen}
+At each $t = 1, \dots, n$, for each outlier type (AO, LS, TC, IO), Estimate outlier effect $\hat{\omega}$ and calculate $\hat{\tau}$. Large $|\hat{\tau}|$ ($> C$) indicates an outlier. Once outlier is detected, estimated effect can be subtracted to obtain adjusted series.\cite{Chen}\\
+
+Project 1
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_1.tex}\\
+
+Project 2
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_2.tex}\\
+
+Project 3
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_3.tex}\\
+
+Project 4: No outliers detected. \\
+%\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_4.tex}\\
+%
+Project 5
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_5.tex}\\
+
+Project 6
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_6.tex}\\
+
+Project 7
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_7.tex}\\
+
+%Project 8
+%\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_8.tex}\\
+
+Project 9
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_9.tex}\\
+
+Project 10
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_10.tex}\\
+
+Project 11
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_11.tex}\\
+
+Project 12
+\input{/home/aha/Desktop/OUTPUTS/SENTIMENTS_OUTPUTS/R_Environment_Variables/outlier_table_12.tex}\\
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \subsubsection{Discussion}
 
